--- a/demo.html
+++ b/demo.html
@@ -37,7 +37,7 @@ $(function() {
 		</script>
 	</head>
 	<body>
-		<h1><a href="https://github.com/abodelot/">jQuery json-viewer</a></h1>
+		<h1><a href="https://github.com/abodelot/jquery.json-viewer">jQuery json-viewer</a></h1>
 		<textarea id="json-input" autocomplete="off">
 {
   "id": 1001,
