--- a/demo.html
+++ b/demo.html
@@ -17,6 +17,10 @@ textarea#json-input {
 	width: 100%;
 	height: 200px;
 }
+pre#json-renderer {
+  border: 1px solid #aaa;
+  padding: 0.5em 1.5em;
+}
 		</style>
 
 		<script>
