Added clickable links

--- a/demo.html
+++ b/demo.html
@@ -47,6 +47,7 @@ $(function() {
   "id": 1001,
   "type": "donut",
   "name": "Cake",
+  "description": "http://en.wikipedia.org/wiki/Doughnut",
   "price": 2.55,
   "available": true,
   "topping": [
