Made dict key names clickable

--- a/demo.html
+++ b/demo.html
@@ -49,12 +49,14 @@ $(function() {
   "name": "Cake",
   "description": "http://en.wikipedia.org/wiki/Doughnut",
   "price": 2.55,
-  "available": true,
+  "available": {
+    store: 42,
+    warehouse: 600
+  },
   "topping": [
     { "id": 5001, "type": "None" },
     { "id": 5002, "type": "Glazed" },
     { "id": 5005, "type": "Sugar" },
-    { "id": 5006, "type": "Powdered Sugar" },
     { "id": 5003, "type": "Chocolate" },
     { "id": 5004, "type": "Maple" }
   ]
