point demo to fork to confirm changes

--- a/demo.html
+++ b/demo.html
@@ -45,7 +45,7 @@ $(function() {
     </script>
   </head>
   <body>
-    <h1><a href="https://github.com/abodelot/jquery.json-viewer">jQuery json-viewer</a></h1>
+    <h1><a href="https://github.com/acidjazz/jquery.json-viewer">jQuery json-viewer</a></h1>
     <textarea id="json-input" autocomplete="off">
 {
   "id": 1001,
@@ -71,6 +71,6 @@ $(function() {
       <label><input type="checkbox" id="with-quotes" />Keys with quotes</label>
     </p>
     <button id="btn-json-viewer" title="run jsonViewer()">Transform to HTML</button>
-    <pre id="json-renderer"></pre>
+    <pre id="json-renderer" class="json-body"></pre>
   </body>
 </html>
