--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,7 @@
     <title>jQuery json-viewer</title>
     <meta charset="utf-8" />
 
-    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="json-viewer/jquery.json-viewer.js"></script>
     <link href="json-viewer/jquery.json-viewer.css" type="text/css" rel="stylesheet" />
 
