--- a/demo.html
+++ b/demo.html
@@ -3,8 +3,7 @@
   <head>
     <title>jQuery json-viewer</title>
     <meta charset="utf-8" />
-
-    <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="json-viewer/jquery.json-viewer.js"></script>
     <link href="json-viewer/jquery.json-viewer.css" type="text/css" rel="stylesheet" />
 
