Faster URL check

--- a/demo.html
+++ b/demo.html
@@ -75,7 +75,12 @@ $(function() {
     { "id": 5005, "type": "Sugar" },
     { "id": 5003, "type": "Chocolate" },
     { "id": 5004, "type": "Maple" }
-  ]
+  ],
+  "uuids": [
+    "826b23ce-2669-4122-981f-3e2e4429159d",
+    "e32111a0-6a87-49ab-b58f-a01bf8d28ba0",
+    "c055a894-698e-41c0-b85f-7510a7351d9d",
+  ],
 }</textarea>
     <p class="options">
       Options:
