--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="json-viewer/jquery.json-viewer.js"></script>
-    <link href="json-viewer/jquery.json-viewer.css" type="text/css" rel="stylesheet" />
+    <link href="json-viewer/jquery.json-viewer.css" type="text/css" rel="stylesheet">
 
     <style type="text/css">
 body {
